--- a/blog.html
+++ b/blog.html
@@ -100,7 +100,6 @@
         </div>
       </div>
     </div>
-
     <div class="contact">
       <div class="contact_ttl">
         <h2 class="contact_ttl-text">お問い合わせ</h2>
@@ -122,20 +121,30 @@
               </div>
             </div>
             <form class="form_contact">
-              <label for="company">
-                <p>会社名</p>
-              </label>
-              <input type="text" name="company" class="contact_area" id="company">
-              <label for="name">
-                <p>お名前<span>*</span></p>
-              </label>
-              <input type="text" name="name" class="contact_area" id="name">
-              <label for="email">
-                <p>メールアドレス<span>*</span></p>
-              </label>
-              <input type="email" name="email" class="contact_area" id="email">
-              <p>お問い合わせ内容<span>*</span></p>
-              <textarea class="contact_area" name="textarea" cols="80" rows="8"></textarea>
+              <div>
+                <label for="company">
+                  <p>会社名</p>
+                </label>
+                <input type="text" name="company" class="contact_area" id="company">
+              </div>
+              <div>
+                <label for="name">
+                  <p>お名前<span>*</span></p>
+                </label>
+                <input type="text" name="name" class="contact_area" id="name" required>
+              </div>
+              <div>
+                <label for="email">
+                  <p>メールアドレス<span>*</span></p>
+                </label>
+                <input type="email" name="email" class="contact_area" id="email" required>
+              </div>
+              <div>
+                <label for="textarea">
+                  <p>お問い合わせ内容<span>*</span></p>
+                </label>
+                <textarea class="contact_area" name="textarea" cols="80" rows="8" required></textarea>
+              </div>
               <div class="contact_submit-content">
                 <input type="submit" name="submit" value="お申し込み" class="submit" id="submit">
               </div>
